Closed Bug 1515314 Opened 7 years ago Closed 7 years ago

Perma Windows 2012 x64 debug Searchfox idx build mozmake.EXE[4]: *** [host_MozsearchIndexer.obj] Error 1

Categories

(Firefox Build System :: General, defect, P5)

defect

Tracking

(firefox66 fixed)

RESOLVED FIXED
Tracking Status
firefox66 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: emilio)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Filed by: ebalazs [at] mozilla.com https://treeherder.mozilla.org/logviewer.html#?job_id=217861367&repo=mozilla-central https://queue.taskcluster.net/v1/task/MOxbdj-pTSCwA90vczzVpg/runs/0/artifacts/public/logs/live_backing.log 12 errors generated. 10:14:35 INFO - z:/task_1545212658/build/src/config/rules.mk:771: recipe for target 'host_MozsearchIndexer.obj' failed 10:14:35 INFO - mozmake.EXE[4]: *** [host_MozsearchIndexer.obj] Error 1 10:14:35 INFO - mozmake.EXE[4]: Leaving directory 'z:/task_1545212658/build/src/obj-firefox/build/clang-plugin' 10:14:35 INFO - mozmake.EXE[4]: *** Waiting for unfinished jobs.... 10:14:39 INFO - mozmake.EXE[4]: Entering directory 'z:/task_1545212658/build/src/obj-firefox/build/clang-plugin' 10:14:39 INFO - z:/task_1545212658/build/src/clang/bin/clang-cl.exe -fms-compatibility-version=19.15.26726 -Fohost_RefCountedInsideLambdaChecker.obj -c -Iz:/task_1545212658/build/src/clang/include -fms-compatibility-version=19.13.26128 -Xclang -std=c++14 -Zc:inline -Zc:strictStrings -Oi -Zc:rvalueCast -Brepro -W4 -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wmissing-field-initializers -Wimplicit-fallthrough -Wcovered-switch-default -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wstring-conversion -MT -O2 -Ob2 -DNDEBUG -EHs-c- -GR- -D_DEBUG_POINTER_IMPL= -D_CRT_SECURE_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_NONSTDC_NO_WARNINGS -D_SCL_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_WARNINGS -DUNICODE -D_UNICODE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -DHAVE_NEW_ASTMATCHER_NAMES -DHAS_ACCEPTS_IGNORINGPARENIMPCASTS -GR- -EHsc -O2 -DDEBUG=1 -Iz:/task_1545212658/build/src/build/clang-plugin -Iz:/task_1545212658/build/src/obj-firefox/build/clang-plugin -Iz:/task_1545212658/build/src/obj-firefox/dist/include -Xclang -MP -Xclang -dependency-file -Xclang .deps/host_RefCountedInsideLambdaChecker.obj.pp -Xclang -MT -Xclang host_RefCountedInsideLambdaChecker.obj -Fdhost_RefCountedInsideLambdaChecker.pdb -Iz:/task_1545212658/build/src/obj-firefox/dist/include/nspr z:/task_1545212658/build/src/build/clang-plugin/RefCountedInsideLambdaChecker.cpp 10:14:39 INFO - mozmake.EXE[4]: Leaving directory 'z:/task_1545212658/build/src/obj-firefox/build/clang-plugin' 10:14:39 INFO - z:/task_1545212658/build/src/config/recurse.mk:74: recipe for target 'build/clang-plugin/host' failed 10:14:39 INFO - mozmake.EXE[3]: *** [build/clang-plugin/host] Error 2 10:14:39 INFO - z:/task_1545212658/build/src/config/recurse.mk:32: recipe for target 'compile' failed 10:14:39 INFO - mozmake.EXE[2]: *** [compile] Error 2 10:14:39 INFO - z:/task_1545212658/build/src/config/rules.mk:431: recipe for target 'default' failed 10:14:39 INFO - mozmake.EXE[1]: *** [default] Error 2 10:14:39 INFO - client.mk:125: recipe for target 'build' failed 10:14:39 INFO - mozmake.EXE: *** [build] Error 2 10:14:39 INFO - 0 compiler warnings present. 10:14:39 ERROR - Return code: 2 10:14:39 WARNING - setting return code to 2 10:14:39 FATAL - 'mach build -v' did not run successfully. Please check log for errors. 10:14:39 FATAL - Running post_fatal callback... 10:14:39 FATAL - Exiting -1 10:14:39 INFO - [mozharness: 2018-12-19 10:14:39.299000Z] Finished build step (failed) 10:14:39 INFO - Running post-run listener: _parse_build_tests_ccov 10:14:39 INFO - Running post-run listener: _shutdown_sccache 10:14:39 INFO - Running post-run listener: _summarize 10:14:39 ERROR - # TBPL FAILURE # 10:14:39 INFO - [mozharness: 2018-12-19 10:14:39.299000Z] FxDesktopBuild summary: 10:14:39 ERROR - # TBPL FAILURE # [taskcluster 2018-12-19T10:14:39.316Z] Exit Code: 4294967295 [taskcluster 2018-12-19T10:14:39.316Z] User Time: 0s [taskcluster 2018-12-19T10:14:39.316Z] Kernel Time: 15.625ms [taskcluster 2018-12-19T10:14:39.316Z] Wall Time: 4m13.5685099s [taskcluster 2018-12-19T10:14:39.316Z] Result: FAILED
More context: 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1000,31): error: no member named 'getLocStart' in 'clang::FunctionDecl' 10:14:35 INFO - SourceLocation Start = D->getLocStart(); 10:14:35 INFO - ~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1015,22): error: no member named 'getLocEnd' in 'clang::ParmVarDecl' 10:14:35 INFO - End = Param->getEndLoc(); 10:14:35 INFO - ~~~~~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(40,19): note: expanded from macro 'getEndLoc' 10:14:35 INFO - #define getEndLoc getLocEnd 10:14:35 INFO - ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1023,31): error: no member named 'getLocStart' in 'clang::TagDecl' 10:14:35 INFO - SourceLocation Start = D->getLocStart(); 10:14:35 INFO - ~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1033,68): error: no member named 'getLocEnd' in 'clang::CXXBaseSpecifier' 10:14:35 INFO - std::pair<FileID, unsigned> Loc = SM.getDecomposedLoc(Base.getEndLoc()); 10:14:35 INFO - ~~~~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(40,19): note: expanded from macro 'getEndLoc' 10:14:35 INFO - #define getEndLoc getLocEnd I'm assuming this is fallout from the clang update in bug 1512921. 10:14:35 INFO - ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1039,22): error: no member named 'getLocEnd' in 'clang::CXXBaseSpecifier' 10:14:35 INFO - End = Base.getEndLoc(); 10:14:35 INFO - ~~~~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(40,19): note: expanded from macro 'getEndLoc' 10:14:35 INFO - #define getEndLoc getLocEnd 10:14:35 INFO - ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1122,30): error: no member named 'getLocStart' in 'clang::NamedDecl' 10:14:35 INFO - SourceRange PeekRange(D->getBeginLoc(), D->getEndLoc()); 10:14:35 INFO - ~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(39,21): note: expanded from macro 'getBeginLoc' 10:14:35 INFO - #define getBeginLoc getLocStart 10:14:35 INFO - ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1122,48): error: no member named 'getLocEnd' in 'clang::NamedDecl' 10:14:35 INFO - SourceRange PeekRange(D->getBeginLoc(), D->getEndLoc()); 10:14:35 INFO - ~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(40,19): note: expanded from macro 'getEndLoc' 10:14:35 INFO - #define getEndLoc getLocEnd 10:14:35 INFO - ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1201,29): error: no member named 'getLocStart' in 'clang::CXXConstructExpr' 10:14:35 INFO - SourceLocation Loc = E->getLocStart(); 10:14:35 INFO - ~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1269,28): error: no member named 'getLocStart' in 'clang::TagTypeLoc' 10:14:35 INFO - SourceLocation Loc = L.getBeginLoc(); 10:14:35 INFO - ~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(39,21): note: expanded from macro 'getBeginLoc' 10:14:35 INFO - #define getBeginLoc getLocStart 10:14:35 INFO - ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1283,28): error: no member named 'getLocStart' in 'clang::TypedefTypeLoc' 10:14:35 INFO - SourceLocation Loc = L.getBeginLoc(); 10:14:35 INFO - ~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(39,21): note: expanded from macro 'getBeginLoc' 10:14:35 INFO - #define getBeginLoc getLocStart 10:14:35 INFO - ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1297,28): error: no member named 'getLocStart' in 'clang::InjectedClassNameTypeLoc' 10:14:35 INFO - SourceLocation Loc = L.getBeginLoc(); 10:14:35 INFO - ~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(39,21): note: expanded from macro 'getBeginLoc' 10:14:35 INFO - #define getBeginLoc getLocStart 10:14:35 INFO - ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(1311,28): error: no member named 'getLocStart' in 'clang::TemplateSpecializationTypeLoc' 10:14:35 INFO - SourceLocation Loc = L.getBeginLoc(); 10:14:35 INFO - ~ ^ 10:14:35 INFO - z:/task_1545212658/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(39,21): note: expanded from macro 'getBeginLoc' 10:14:35 INFO - #define getBeginLoc getLocStart 10:14:35 INFO - ^ 10:14:35 INFO - 12 errors generated. 10:14:35 INFO - z:/task_1545212658/build/src/config/rules.mk:771: recipe for target 'host_MozsearchIndexer.obj' failed
Blocks: 1512921
This looks like more or less the same error as https://hg.mozilla.org/mozilla-central/rev/335e8f4298ce fixed.
I thought bug 1501821 was supposed to address this. Andi, do you know why this is still failing?
Flags: needinfo?(bpostelnicu)
There were at least a few unconverted callsites. I sent https://treeherder.mozilla.org/#/jobs?repo=try&revision=15f7a8eed858ad303c6d7ca54e12cfc67e3f6f11 to test a fix.
So this is a little weird. I got the toolchain from https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=585f7d2135eeaddf35d239c909ef43ffa37fa860&selectedJob=217790882 __clang_major__ is 8 __clang_minor__ is 0 so CLANG_VERSION_FULL should be 800. However we're expanding the macro getBeginLoc -> getLocStart: 16:02:21 INFO - error: no member named 'getLocStart' in 'clang::FunctionDecl' 16:02:21 INFO - SourceLocation Start = D->getBeginLoc(); 16:02:21 INFO - ~ ^ 16:02:21 INFO - z:/task_1545233980/build/src/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp(39,21): note: expanded from macro 'getBeginLoc' 16:02:21 INFO - #define getBeginLoc getLocStart 16:02:21 INFO - ^ #if CLANG_VERSION_FULL < 800 // Starting with Clang 8.0 some basic functions have been renamed #define getBeginLoc getLocStart #define getEndLoc getLocEnd #endif So it seems like CLANG_VERSION_FULL is not being registered as >= 800. There's #define CLANG_VERSION_FULL (CLANG_VERSION_MAJOR * 100 + CLANG_VERSION_MINOR) but I can't tell where CLANG_VERSION_MAJOR/MINOR come from. I tried a build with __clang_major__ and __clang_minor__ but it's the same behavior https://treeherder.mozilla.org/#/jobs?repo=try&revision=5a82d04c8837450f9f48c59b143017e691c84e7a&selectedJob=217927403
I was building with LLVM trunk today and I had to fix a couple stuff, I'll take this.
Assignee: nobody → emilio
Flags: needinfo?(bpostelnicu)
The issue is that CLANG_VERSION_FULL is in plugin.h, which isn't included by the indexer because the indexer needs to build standalone.
Attached file GitHub Pull Request
Attachment #9032599 - Flags: review?(kats)
Attachment #9032599 - Flags: review?(kats) → review+
Pushed by emilio@crisal.io: https://hg.mozilla.org/integration/mozilla-inbound/rev/0894fc25ece7 Fix the build of Searchfox's indexer with trunk clang and with assertions enabled. r=kats
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: