Bug 1515314 - Fix the build of Searchfox's indexer with trunk clang and with assertions enabled. r=kats

CLANG_VERSION_FULL is a macro that lives in mozilla-central, so it doesn't exist
while building the indexer. Just use the macro clang provides.